--- a/VueJS/index.html
+++ b/VueJS/index.html
@@ -3,6 +3,9 @@
 
 <div id="app">
 <!-- render your list here -->
+	<list
+		v-bind:todos="todos"
+	></list>
 </div>
 
-<script type="module" src="/index.js"></script>
+<script type="module" src="./index.js"></script>
