New todos can be added and have proper ids.
Manipulation of the todo array is now handled exclusively in the main vue instance. Events are passed to the main vue instance for adding, saving and deleting todos.

--- a/VueJS/index.html
+++ b/VueJS/index.html
@@ -5,6 +5,9 @@
 <!-- render your list here -->
 	<list
 		v-bind:todos="todos"
+		v-on:add-todo="addTodo"
+		v-on:save-todo="saveTodo"
+		v-on:delete-todo="deleteTodo"
 	></list>
 </div>
 
